2007-10-28  Jürg Billeter  <j@bitron.ch>

	* vala/valaenum.vala: add get_values method

2007-10-27  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: use pointer indirection to access
	  length variable of out array parameters, fixes bug 480019

2007-10-27  Jürg Billeter  <j@bitron.ch>

	* ccode/Makefile.am, ccode/valaccodeenum.vala,
	  ccode/valaccodeenumvalue.vala, gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratorclass.vala: support arbitrary expressions as
	  enum values, fixes bug 488387

2007-10-27  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegeneratorsourcefile.vala: never write typedefs for
	  static or declaration-only classes and interfaces, fixes bug 479106

2007-10-27  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: display line number when reporting
	  type error in conditional expression, fixes bug 478392

2007-10-27  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: ensure that new arrays own their
	  elements, fixes bug 488326

2007-10-27  Jürg Billeter  <j@bitron.ch>

	Update svn:ignore property.

2007-10-27  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/atk/, vapi/packages/gdk-2.0/, vapi/packages/gio-2.0/,
	  vapi/packages/gtk+-2.0/, vapi/packages/pango/: update to use
	  vala-gen-introspect

	* vapi/atk.vapi, vapi/gdk-2.0.vapi, vapi/gio-2.0.vapi,
	  vapi/gtk+-2.0.vapi, vapi/pango.vapi: regenerated

2007-10-27  Jürg Billeter  <j@bitron.ch>

	* vapigen/valavapigen.vala: fix .deps file handling

2007-10-27  Jürg Billeter  <j@bitron.ch>

	* configure.ac, vapigen/Makefile.am, vapigen/gidlgen/Makefile.am,
	  vapigen/gidlgen/vala-gen-introspect.in, vapigen/vala-gen-introspect/:
	  rename gidlgen subdirectory to vala-gen-introspect

2007-10-26  Jürg Billeter  <j@bitron.ch>

	* configure.ac, doc/Makefile.am, doc/gidlgen.1,
	  doc/vala-gen-introspect.1, doc/vapigen.1, vapigen/gidlgen/Makefile.am,
	  vapigen/gidlgen/gapi2xml.pl, vapigen/gidlgen/gapi_pp.pl,