@@ -1,6 +1,6 @@
 /* valabinaryexpression.vala
  *
- * Copyright (C) 2006  Jürg Billeter
+ * Copyright (C) 2006-2007  Jürg Billeter
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -113,5 +113,6 @@ public enum Vala.BinaryOperator {
 	BITWISE_OR,
 	BITWISE_XOR,
 	AND,
-	OR
+	OR,
+	IN
 }
